update social meta

--- a/index.html
+++ b/index.html
@@ -3,14 +3,30 @@
 	<head>
 
 		<!-- Basic -->
-		<meta charset="utf-8">
+		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" >
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">	
 
 		<title>Chicago Black Tech Ecosystem Impact Report | Tech While Black</title>	
-
-		<meta name="keywords" content="HTML5 Template" />
-		<meta name="description" content="Tech While Black Chicago Black Tech Ecosystem Impact Report ">
+		<link rel="canonical" href="https://impact.techwhileblack.com">
 		<meta name="author" content="dominicmliddell.com">
+		<meta name="description" content="Reporting on Tech While Black Impact on the Chicago black tech ecosystem from 2014-2016">
+		<!--FACEBOOK-->
+		<meta property="og:title" content="Chicago Black Tech Ecosystem Impact Report" >
+		<meta property="og:site_name" content="https://impact.techwhileblack.com">
+		<meta property="og:url" content="https://impact.techwhileblack.com" >
+		<meta property="og:description" content="Reporting on Tech While Black Impact on the Chicago black tech ecosystem from 2014-2016" >
+		<meta property="og:image" content="https://impact.techwhileblack.com/img/promo-fb.png" >
+		<meta property="fb:app_id" content="1858223114404312" >
+		<meta property="og:type" content="website" >
+		<meta property="og:locale" content="en-US" >
+		<!--TWITTER-->
+		<meta property="twitter:card" content="summary" >
+		<meta property="twitter:title" content="Chicago Black Tech Ecosystem Impact Report" >
+		<meta property="twitter:description" content="Reporting on Tech While Black Impact on the Chicago black tech ecosystem from 2014-2016" >
+		<meta property="twitter:creator" content="@techwhileblack" >
+		<meta property="twitter:url" content="https://impact.techwhileblack.com" >
+		<meta property="twitter:image" content="https://impact.techwhileblack.com/img/promo.png" >
+		<meta property="twitter:image:alt" content="Chicago Black Tech " >
 
 		<!-- Favicon -->
 		<link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon" />
@@ -62,7 +78,7 @@
 							<div class="header-column">
 								<div class="header-logo">
 									<a href="index.html">
-										<img alt="Porto" width="82" height="40" src="img/logo.png">
+										<img alt="Tech While Black logo" width="82" height="40" src="img/logo.png">
 									</a>
 								</div>
 							</div>
@@ -146,7 +162,7 @@
 								<p class="lead">I focused on blacks in technology because I felt and still feel that its important to spend time dispelling the message tech was unwelcoming to our community. My own personal experience had taught me that it was possible to leverage tech to not just get a job and build someone else's dream, but to also bring wealth and ownership back into the black community. </p>
 								<p class="lead">My work with Tech While Black has changed me as a person.  Its helped me to grow and challenge myself in ways that I never could have imagined. I've been fortunate to meet so many talented, skilled black people who are dedicated to reaching back to help others have the same opportunities to succeed. Everyone that I have met or interacted with has left their mark on me and the Tech While Black community.</p>
 								<p class="lead">There has been a wealth of successes and failures throughout this journey.  There have been times that I've felt like giving up and it seems that every time, I get an email out of the blue from someone who wants to let me know that they are being inspired by Tech While Black and asking me to keep it up. I don't know if I change the tone of my messaging during these times or if its just the universe knowing I need the pick me up, but its the people in our community that have kept me going.</p>
-								<p class="lead">As we finished out 2016 and headed into 2017, I found myself in a state that was unreachable to the usual encouragement.  After three years, I was mentally and emotionally worn down from the constant in-drama, gatekeeping, imitation, funding struggles, searching for program space, etc.  I was jaded and could no longer talk about the Chicago black tech ecosytem in a postivie manner during private conversations. In short, I was burnt out in a major way.</p>
+								<p class="lead">As we finished out 2016 and headed into 2017, I found myself in a state that was unreachable to the usual encouragement.  After three years, I was mentally and emotionally worn down from the constant in-drama, gatekeeping, imitation, funding struggles, searching for program space, etc.  I was jaded and could no longer talk about the Chicago black tech ecosytem in a positive manner during private conversations. In short, I was burnt out in a major way.</p>
 								<p class="lead">I took a break and walked away from it slightly, leaving unanswered emails and incomplete tasks behind. Publicly, I tried to put on a brave face by saying I was taking a hiatus, but privately I stated that I might have finally reached my endpoint. After a month of working on other projects that have been on the backburner and making progress on personal matters, I started having daily thoughts that it was time to end Tech While Black for good. I decided to put together this page as a sort of end-of-life impact review.</p>
 								<p class="lead">I saved this letter for last because I knew that the process of completing this page would make the final decision for me on whether I would get back to work, extend my hiatus, or end the project completely. I invite you now to review this comprehensive report on the Tech While Black journey, our impact on the Chicago black tech ecosystem and learn about the decisions I made regarding the future of Tech While Black.</p>
 							</div>
@@ -175,7 +191,7 @@
 								<p class=" lead">Dominic M. Liddell believed that the existing conversations focused too much on the lack of diversity and set out to change the conversation.  Dominic thought that the real problem was a lack of visibility by those actively working and doing business in technology.  Dominic felt that this lack of visibility and the current conversation about diversity served as deterrants. Dominic founded Tech While Black (as Coding While Black) with the goals of highlighting black tech achievement in technology.</p>
 								<p class="lead">Very early in the quest to highlight local achievement, Dominic identified other factors that he thought could also be deterrants.  At this point, he developed a hypothesis that, while there were some very real barriers to entry, it was a lack of participation, representation, and collaboration by those who had overcome those barriers that led to the false perception that there is a lack of blacks succeeding and leading in technology. It was this hypothesis that sparked our journey and that has influenced our programming every step of the way.</p>
 								<p class="lead">In our launch year, 2014, Dominic tested the waters with a few events and meetups. It wasn't until 2015 that the full experiment went into effect. We hosted three main types of events: open codes, networking events, and trainings. During this time we bounced around the city without a dedicated space and enjoyed the generosity of those who hosted our activities. Our funding came primarily from Dominic's personal investment and revenue from our events.</p>
-								<p class="lead">In early 2016, We ended the first experiement and began to implement the next phase. We moved into 1871 and hosted the bulk of our events there.  Our funding became a mix of individual contributions, corporate donations, and revenue from our events. This year, a few important decisions were made. After a false start with our training program due to Dominic being unhappy with the quality of the program.  Dominic decided to drop the experimental nature of program delivery and focus on outline and implementing strategic goals.</p>
+								<p class="lead">In early 2016, We ended the first experiement and began to implement the next phase. We moved into 1871 and hosted the bulk of our events there.  Our funding became a mix of individual contributions, corporate donations, and revenue from our events. This year, a few important decisions were made. After a false start with our training program due to Dominic being unhappy with the quality of the program, Dominic decided to drop the experimental nature of program delivery and focus on outlining and implementing strategic goals.</p>
 								<p class="lead">At this point we implemented a name change and focused on more fundraising events to support our curriculum and development activities. In addition, revenue from  events held during this time were used to build up a scholarship and startup grant fund. Behind the scenes, we connected members with career referrals, spread awareness through speaking engagments, and worked on building up partnerships when we weren't developing programming.</p>
 								<p class="lead"> Our mission:</p>
 								<p class="med-text text-center">Increase black tech representation through workforce development, professional development and entrepreneur support while encouraging participation and collaboration.</p>
@@ -372,7 +388,7 @@
 						<div class="featured-box-full featured-box-full-primary" style="height: 363px;">
 							<i class="fa fa-trophy"></i>
 							<h4>Entrepreneur Support</h4>
-							<p class="lead">Development of entrepreneur support network and including education, funding, and more.</p>
+							<p class="lead">Development of entrepreneur support network including education, funding, and more.</p>
 						</div>
 					</div>
 				</div>
@@ -451,7 +467,7 @@
 						<div class="row">
 							<div class="col-md-12">
 								<h4 class="med-text mb-none">Did we make an impact?</h4>
-								<p class="mb-none lead">As the first Chicago organization to focus specifically on black tech community, Tech While Black kicked off a movement that would set the stage for a local revolution of empowerment. Our impact shows in our metrics. We've delivered on free and affordable classes, scholarships, career referrals, and spotlights that have helped personal and business brands take off. Oh yeah, we also hooked our community up with lots of freebies, swag, and conference tickets. </p>
+								<p class="mb-none lead">As the first Chicago organization to focus specifically on black tech community, Tech While Black kicked off a movement that would set the stage for a local revolution of empowerment. Even if that was all we did it would be enough, but our impact shows in our metrics. We didn't achieve every goal, every time, but we've delivered on free and affordable classes, scholarships, career referrals, and spotlights that have helped personal and business brands take off. Oh yeah, we also hooked our community up with lots of freebies, swag, and conference tickets. </p>
 								<hr class="tall">
 								<div class="row">
 									<div class="counters">
@@ -507,7 +523,7 @@
 					<div class="container">
 						<div class="row">
 							<div class="col-md-12">
-								<p class="lead mb-none">Tech While Black programming has always aimed to address the intersectionality that exists within our community by building bridges that empower our members to celebrate their whole-being. Numerous partnerships with local organizations resulted in safe-welcoming spaces that drew diverse audiences for a inclusive experiences.  Other partnerships involved partnering for activities such as panels, speaking, and other awareness building.</p>
+								<p class="lead mb-none">Tech While Black programming has always aimed to address the intersectionality that exists within our community by building bridges that empower our members to celebrate their whole-being. Numerous partnerships with local organizations resulted in safe-welcoming spaces that drew diverse audiences for inclusive experiences.  Other partnerships involved partnering for activities such as panels, speaking, and other awareness building.</p>
 								<hr/>
 								<p>A few representative communities:</p>
 								<div class="row">
@@ -520,7 +536,7 @@
 											<p class="lead text-center">LGBT</p>
 										</div>
 										<div class="col-md-2">
-											<img class="img-responsive" src="img/use/partners/blackstar1.png" alt="Project Image">
+											<img class="img-responsive" src="img/use/partners/blackstar.png" alt="Project Image">
 											<p class="lead text-center">Youth</p>
 										</div>
 										<div class="col-md-2">
@@ -751,7 +767,7 @@
 								<div class="row">
 									<div class="col-md-12">
 										<h4 class="med-text mb-none">What's Next?</h4>
-										<p class="mb-none">We are ready to move into our own home and we're calling it 10fwd.  We plan to continue creating safe, welcoming, inclusive space as we deliver our Chicago community programs. Tech While Black will be a tenant of 10fwd where we will produce our online content and contine to develop our platform.We welcome you to learn more about how you can help us deliver online content or partner with us in launching 10fwd in Chicago. </p>
+										<p class="mb-none">We are ready to move into our own home and we're calling it 10fwd.  We plan to continue creating safe, welcoming, inclusive space as we deliver our Chicago community programs. Tech While Black will be one of several tenants at 10fwd where we will produce our online content and contine to develop our platform. We welcome you to learn more about how you can help us deliver online content or partner with us in launching 10fwd in Chicago. </p>
 									</div>
 								</div>
 							</section>
