--- a/index.html
+++ b/index.html
@@ -180,11 +180,18 @@
 								<p class="lead">When I started out on this journey in 2014, I didn't have a real plan of action, just a hypothesis that cultivating community for blacks in technology would be more impactful than questioning why Google, Apple, Facebook, etc. weren't hiring blacks in technology. I felt that this focus was ignoring the real and tangible issues that we could all work on to not just improve diversity at the top tier of tech, but throughout the industry. </p>
 
 								<p class="lead">I focused on blacks in technology because I felt and still feel that its important to spend time dispelling the message tech was unwelcoming to our community. My own personal experience had taught me that it was possible to leverage tech to not just get a job and build someone else's dream, but to also bring wealth and ownership back into the black community. </p>
+								<hr/>
+								<a class="btn btn-primary" role="button" data-toggle="collapse" href="#letter-collapse" aria-expanded="false" aria-controls="letter-collapse">
+								  View the rest
+								</a>
+								<div class="collapse" id="letter-collapse">
+								  <hr/>
 								<p class="lead">My work with Tech While Black has changed me as a person.  Its helped me to grow and challenge myself in ways that I never could have imagined. I've been fortunate to meet so many talented, skilled black people who are dedicated to reaching back to help others have the same opportunities to succeed. Everyone that I have met or interacted with has left their mark on me and the Tech While Black community.</p>
 								<p class="lead">There has been a wealth of successes and failures throughout this journey.  There have been times that I've felt like giving up and it seems that every time, I get an email out of the blue from someone who wants to let me know that they are being inspired by Tech While Black and asking me to keep it up. I don't know if I change the tone of my messaging during these times or if its just the universe knowing I need the pick me up, but its the people in our community that have kept me going.</p>
 								<p class="lead">As we finished out 2016 and headed into 2017, I found myself in a state that was unreachable to the usual encouragement.  After three years, I was mentally and emotionally worn down from the constant in-drama, gatekeeping, imitation, funding struggles, searching for program space, etc.  I was jaded and could no longer talk about the Chicago black tech ecosytem in a positive manner during private conversations. In short, I was burnt out in a major way.</p>
 								<p class="lead">I took a break and walked away from it slightly, leaving unanswered emails and incomplete tasks behind. Publicly, I tried to put on a brave face by saying I was taking a hiatus, but privately I stated that I might have finally reached my endpoint. After a month of working on other projects that have been on the backburner and making progress on personal matters, I started having daily thoughts that it was time to end Tech While Black for good. I decided to put together this page as a sort of end-of-life impact review.</p>
 								<p class="lead">I saved this letter for last because I knew that the process of completing this page would make the final decision for me on whether I would get back to work, extend my hiatus, or end the project completely. I invite you now to review this comprehensive report on the Tech While Black journey, our impact on the Chicago black tech ecosystem and learn about the decisions I made regarding the future of Tech While Black.</p>
+								</div>
 							</div>
 						</div>
 					</div>
@@ -228,14 +235,22 @@
 								<h2>Why We <strong>Tech While Black</strong></h2>
 							</div>
 							<div class="col-md-12">
-								<p class="lead">Type "diversity in tech" or "blacks in technology" into Google and you'll be presented with a wealth of articles, essays, studies, and other material that focus on the lack of diversity in technology. </p>
+								<p class="lead">Type "diversity in tech" or "blacks in technology" into Google and you'll be presented with a wealth of articles, essays, studies, and other materials that focus on the lack of diversity in technology. </p>
 								<p class=" lead">Dominic M. Liddell believed that the existing conversations focused too much on the lack of diversity and set out to change the conversation.  Dominic thought that the real problem was a lack of visibility by those actively working and doing business in technology.  Dominic felt that this lack of visibility and the current conversation about diversity served as deterrants. Dominic founded Tech While Black (as Coding While Black) with the goals of highlighting black tech achievement in technology.</p>
 								<p class="lead">Very early in the quest to highlight local achievement, Dominic identified other factors that he thought could also be deterrants.  At this point, he developed a hypothesis that, while there were some very real barriers to entry, it was a lack of participation, representation, and collaboration by those who had overcome those barriers that led to the false perception that there is a lack of blacks succeeding and leading in technology. It was this hypothesis that sparked our journey and that has influenced our programming every step of the way.</p>
+								<hr/>
+								<a class="btn btn-primary" role="button" data-toggle="collapse" href="#story-collapse" aria-expanded="false" aria-controls="story-collapse">
+								  View the rest
+								</a>
+								<div class="collapse" id="story-collapse">
+								  <hr/>
+
 								<p class="lead">In our launch year, 2014, Dominic tested the waters with a few events and meetups. It wasn't until 2015 that the full experiment went into effect. We hosted three main types of events: open codes, networking events, and trainings. During this time we bounced around the city without a dedicated space and enjoyed the generosity of those who hosted our activities. Our funding came primarily from Dominic's personal investment and revenue from our events.</p>
 								<p class="lead">In early 2016, We ended the first experiement and began to implement the next phase. We moved into 1871 and hosted the bulk of our events there.  Our funding became a mix of individual contributions, corporate donations, and revenue from our events. This year, a few important decisions were made. After a false start with our training program due to Dominic being unhappy with the quality of the program, Dominic decided to drop the experimental nature of program delivery and focus on outlining and implementing strategic goals.</p>
 								<p class="lead">At this point we implemented a name change and focused on more fundraising events to support our curriculum and development activities. In addition, revenue from  events held during this time were used to build up a scholarship and startup grant fund. Behind the scenes, we connected members with career referrals, spread awareness through speaking engagments, and worked on building up partnerships when we weren't developing programming.</p>
 								<p class="lead"> Our mission:</p>
 								<p class="med-text text-center">Increase black tech representation through workforce development, professional development and entrepreneur support while encouraging participation and collaboration.</p>
+							</div>
 							</div>
 						</div>
 					</div>
@@ -301,11 +316,8 @@
 									</a>
 								</div>
 								<div class="col-md-4">
-									<a class="img-thumbnail lightbox" href="img/use/employment.png" data-plugin-options="{&quot;type&quot;:&quot;image&quot;}">
-										<img class="img-responsive" src="img/use/employment.png" alt="Project Image">
-										<span class="zoom">
-											<i class="fa fa-search"></i>
-										</span>
+									<a  href="img/use/black-stats.png">
+										<img class="img-responsive" src="img/use/black-stats.png" alt="Project Image">
 									</a>
 								</div>
 								<div class="col-md-6 clearfix">
@@ -500,28 +512,28 @@
 									<div class="counters">
 										<div class="col-md-3 col-sm-6">
 											<div class="counter counter-dark">
-												<i class="fa fa-users"></i>
+												<i class="fa fa-calendar"></i>
 												<strong data-to="18">0</strong>
 												<label>Networking Events</label>
 											</div>
 										</div>
 										<div class="col-md-3 col-sm-6">
 											<div class="counter counter-dark">
-												<i class="fa fa-star"></i>
+												<i class="fa fa-terminal"></i>
 												<strong data-to="15">0</strong>
 												<label>Open Hacks</label>
 											</div>
 										</div>
 										<div class="col-md-3 col-sm-6">
 											<div class="counter counter-dark">
-												<i class="fa fa-coffee"></i>
+												<i class="fa fa-mortar-board"></i>
 												<strong data-to="14">0</strong>
 												<label>Classes</label>
 											</div>
 										</div>
 										<div class="col-md-3 col-sm-6">
 											<div class="counter counter-dark">
-												<i class="fa fa-bar-chart"></i>
+												<i class="fa fa-asterisk"></i>
 												<strong data-to="8">0</strong>
 												<label>Other</label>
 											</div>
@@ -576,7 +588,7 @@
 									<div class="counters">
 										<div class="col-md-3 col-sm-6">
 											<div class="counter counter-dark">
-												<i class="fa fa-user"></i>
+												<i class="fa fa-users"></i>
 												<strong data-to="126">0</strong>
 												<label>Class Participants</label>
 											</div>
@@ -590,14 +602,14 @@
 										</div>
 										<div class="col-md-3 col-sm-6">
 											<div class="counter counter-dark">
-												<i class="fa fa-coffee"></i>
+												<i class="fa fa-briefcase"></i>
 												<strong data-to="42">0</strong>
 												<label>Career Referrals</label>
 											</div>
 										</div>
 										<div class="col-md-3 col-sm-6">
 											<div class="counter counter-dark">
-												<i class="fa fa-bar-chart"></i>
+												<i class="fa fa-bullhorn"></i>
 												<strong data-to="37">0</strong>
 												<label>Community Spotlights</label>
 											</div>
@@ -915,15 +927,16 @@
 				<div class="container-fluid">
 					<div class="row">
 						<div class="col-md-6 p-none">
-							<section class="parallax section section-parallax  section-overlay" data-stellar-background-ratio=".8" style="background-image: url(img/use/next.jpg); height:100%;">
+							<section class="parallax section section-parallax  section-overlay match-height" data-stellar-background-ratio=".8" style="background-image: url(img/use/next.jpg); height:100%;">
 							</section>
 						</div>
 						<div class="col-md-6 p-none">
-							<section id="outlook"  class="section section-primary pl-lg pr-lg ">
+							<section id="outlook"  class="section section-primary pl-lg pr-lg match-height">
+								<div class="row">">
 								<div class="row">
 									<div class="col-md-12">
 										<h4 class="med-text mb-none">What's Next?</h4>
-										<p class="mb-none">We are ready to move into our own home and we're calling it 10fwd.  We plan to continue creating safe, welcoming, inclusive space as we deliver our Chicago community programs. Tech While Black will be one of several tenants at 10fwd where we will produce our online content and contine to develop our platform. We welcome you to learn more about how you can help us deliver online content or partner with us in launching 10fwd in Chicago. </p>
+										<p class="mb-none lead">We are working on launching our first neighborhood tech hub, 10fwd. Tech While Black will be one of several tenants at 10fwd where we will produce our online content and continue to develop our platform. 10fwd will continue our tradition of workforce development, professional development, and entrepreneur support. </p>
 									</div>
 								</div>
 							</section>
@@ -967,7 +980,7 @@
 										</div>
 										<div class="row">
 											<div class="col-md-12">
-												<p>We are looking for volunteers to join our content production, marketing,  and development teams.</p>
+												<p>We need volunteers to join our content production, marketing,  and development teams.</p>
 												<ul>
 													<li>Sponsorship, Grants, and Other Funding</li>
 													<li>Video Production</li>
@@ -980,7 +993,7 @@
 													<li>Mobile and Web Development</li>
 												</ul>
 												<hr/>
-												<a href="http://bit.ly/2lc8m9U" class="btn btn-lg btn-block btn-quaternary mr-xs mb-lg">Help Complete Online Content</a>
+												<a href="http://bit.ly/2lc8m9U"  target="_blank" class="btn btn-lg btn-block btn-quaternary mr-xs mb-lg">Help Complete Online Content</a>
 											</div>
 										</div>
 									</div>
@@ -996,7 +1009,7 @@
 										</div>
 										<div class="row">
 											<div class="col-md-12">
-												<p>We have a few specific needs as listed below, but please contact us if you have another way that you can support our mission.</p>
+												<p>We have a few specific needs as listed below, but please contact us if you have another way that you can support.</p>
 												<ul>
 													<li>Sponsorship, Grants, and Other Funding</li>
 													<li>Permanent or Temporary Program Space</li>
@@ -1009,7 +1022,7 @@
 													<li>Instructors, Mentors, Coaches</li>
 												</ul>
 												<hr/>
-												<a href="http://bit.ly/2l86iQM" class="btn btn-lg btn-block btn-quaternary mr-xs mb-lg">Help Launch 10fwd</a>
+												<a href="http://bit.ly/2l86iQM" target="_blank" class="btn btn-lg btn-block btn-quaternary mr-xs mb-lg">Help Launch 10fwd</a>
 											</div>
 										</div>
 									</div>
@@ -1020,7 +1033,7 @@
 					</div>
 						</div>
 
-						
+
 					</div>
 				</section>
 
@@ -1047,7 +1060,7 @@
 								<p>© Copyright 2016. <a href="http://techwhileblack.com">Tech While Black</a> | 2014 - 2016 Chicago Black Tech Ecosystem Impact Report | Moratorium.</p>
 							</div>
 							<div class="col-md-4">
-								<p>Developed by <a href="http://dominicmliddell.com">Dominic M. Liddell</a></p>
+								<p>Developed by <a href="http://dmml.tech">dmml</a></p>
 							</div>
 						</div>
 					</div>
