--- a/index.html
+++ b/index.html
@@ -926,7 +926,7 @@
 										<li class="list-group-item">Shayna Atkins</li>
 									</ul>
 								
-								<hr class="tall"/>
+								<hr class="short"/>
 								<p class="lead">Thanks to all who volunteered and participated in this journey. You all are appreciated!</p>
 								<p class="huge-text">We couldn't have done it without you!</p>
 								</div>
