--- a/index.html
+++ b/index.html
@@ -943,7 +943,7 @@
 						</div>
 						<div class="col-md-6 p-none">
 							<section id="outlook"  class="section section-primary pl-lg pr-lg match-height">
-								<div class="row">">
+								<div class="row">
 								<div class="row">
 									<div class="col-md-12">
 										<h4 class="med-text mb-none">What's Next?</h4>
