--- a/index.html
+++ b/index.html
@@ -446,21 +446,21 @@
 
 				<div class="featured-boxes-full featured-boxes-full-scale">
 					<div class="col-md-4">
-						<div class="featured-box-full featured-box-full-tertiary" style="height: 363px;">
+						<div class="featured-box-full featured-box-full-tertiary white-text" style="height: 363px;">
 							<i class="fa fa-group"></i>
 							<h4>Workforce Development</h4>
 							<p class="lead">Skills training and job referrals were primary workforce development activities.</p>
 						</div>
 					</div>
 					<div class="col-md-4">
-						<div class="featured-box-full featured-box-full-quaternary" style="height: 363px;">
+						<div class="featured-box-full featured-box-full-quaternary white-text" style="height: 363px;">
 							<i class="fa fa-film"></i>
 							<h4>Professional Development</h4>
 							<p class="lead">Development of professional development curriculum and supplemental activities.</p>
 						</div>
 					</div>
 					<div class="col-md-4">
-						<div class="featured-box-full featured-box-full-primary" style="height: 363px;">
+						<div class="featured-box-full featured-box-full-primary white-text" style="height: 363px;">
 							<i class="fa fa-trophy"></i>
 							<h4>Entrepreneur Support</h4>
 							<p class="lead">Development of entrepreneur support network including education, funding, and more.</p>
@@ -1068,7 +1068,7 @@
 								<p>© Copyright 2016. <a href="http://techwhileblack.com">Tech While Black</a> | 2014 - 2016 Chicago Black Tech Ecosystem Impact Report | Moratorium.</p>
 							</div>
 							<div class="col-md-4">
-								<p>Developed by <a href="http://dmml.tech">dmml</a></p>
+								<p class="white-text">Developed by <a href="http://dmml.tech">dmml</a></p>
 							</div>
 						</div>
 					</div>
