add Jason Holmes

--- a/index.html
+++ b/index.html
@@ -881,6 +881,7 @@
 										<h3>individual</h3>
 									</div>
 									<ul class="list-group">
+										<li class="list-group-item">Jason V. Holmes</li>
 										<li class="list-group-item">Fredric Mitchell</li>
 										<li class="list-group-item">Sandee Kastrul</li>
 										<li class="list-group-item">LaRhonda Frost</li>
