add Jason Holmes

--- a/index.html
+++ b/index.html
@@ -884,7 +884,7 @@
 										<li class="list-group-item">Jason V. Holmes</li>
 										<li class="list-group-item">Fredric Mitchell</li>
 										<li class="list-group-item">Sandee Kastrul</li>
-										<li class="list-group-item">LaRhonda Frost</li>
+										<li class="list-group-item">Ronnie Frost</li>
 										<li class="list-group-item">De'Von Favors</li>
 										<li class="list-group-item">Langston Hill</li>
 										<li class="list-group-item">Jeffery Beckham</li>
