add Jason Holmes

--- a/index.html
+++ b/index.html
@@ -919,12 +919,16 @@
 										<h3>Notable Mentions</h3>
 									</div>
 									<ul class="list-group">
+										<li class="list-group-item">Kimchi Socks</li>
 										<li class="list-group-item">De'Von Favors</li>
 										<li class="list-group-item">Jeffrey Beckham</li>
 										<li class="list-group-item">Jessica Williams</li>
 										<li class="list-group-item">Ablorde Ashigbi</li>
 										<li class="list-group-item">Samara Mejia-Hernade</li>
 										<li class="list-group-item">Shayna Atkins</li>
+										<li class="list-group-item">Amanda Spann</li>
+										<li class="list-group-item">Nigel Dumont</li>
+										<li class="list-group-item">Danta Williams</li>
 									</ul>
 								
 								<hr class="short"/>
