add Jason Holmes

--- a/index.html
+++ b/index.html
@@ -931,11 +931,12 @@
 										<li class="list-group-item">Danta Williams</li>
 									</ul>
 								
-								<hr class="short"/>
-								<p class="lead">Thanks to all who volunteered and participated in this journey. You all are appreciated!</p>
-								<p class="huge-text">We couldn't have done it without you!</p>
+
 								</div>
 							</div>
+							<hr class="short"/>
+								<p class="lead text-center">Thanks to all who volunteered and participated in this journey. 
+									We couldn't have done it without you!</p>
 						</div>
 					</div>
 				</section>
