update github logo

--- a/index.html
+++ b/index.html
@@ -847,7 +847,7 @@
 									</div>
 									<div class="row show-grid">
 										<div class="col-md-3 logo-item">
-											<img class="img-responsive" src="img/use/sponsors/github.png" alt="Project Image">
+											<img class="img-responsive" src="img/use/sponsors/github17.png" alt="Project Image">
 										</div>
 										<div class="col-md-3 logo-item">
 											<img class="img-responsive" src="img/use/sponsors/jellyvision.png" alt="Project Image">
