--- a/index.html
+++ b/index.html
@@ -71,6 +71,10 @@
 	<body class="one-page" data-target="#header" data-spy="scroll" data-offset="100">
 
 		<div class="body">
+		<div class=" alert-message">
+				<p class="text-center">Hello! Sorry for the disruption. The Tech While Black team is working on some major platform updates. In the meantime, please review this report below on what we do in Chicago</p>
+			
+		</div>
 			<header id="header" class="header-narrow header-semi-transparent-light" data-plugin-options='{"stickyEnabled": true, "stickyEnableOnBoxed": true, "stickyEnableOnMobile": true, "stickyStartAt": 1, "stickySetTop": "1"}'>
 				<div class="header-body">
 					<div class="header-container container">
